tests/tests/compile_fail/noncanonical_explicit_id.stderr
error: explicit id "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB" is not valid URL-safe base64: nonzero trailing bits in base64url encoding (expected 32 bytes as an EntityId, RFC 5.9)
  --> tests/compile_fail/noncanonical_explicit_id.rs:12:16
   |
12 |     pub label: String,
   |                ^^^^^^
